--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,21 @@
             <artifactId>slf4j-simple</artifactId>
             <version>1.6.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.mastfrog.builder</groupId>
+            <artifactId>builder-builder-parent</artifactId>
+            <version>1.0.9</version>
+        </dependency>
+        <dependency>
+            <groupId>com.mastfrog.builder</groupId>
+            <artifactId>builder-builder-demo</artifactId>
+            <version>1.0.9</version>
+        </dependency>
+        <dependency>
+            <groupId>io.takari.builder</groupId>
+            <artifactId>takari-builder-apt</artifactId>
+            <version>1.0.0</version>
+        </dependency>
     </dependencies>
 
 
